@@ -4,13 +4,10 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
+import org.wildcodeschool.myblog.dto.ArticleAuthorDTO;
 import org.wildcodeschool.myblog.dto.ArticleDTO;
-import org.wildcodeschool.myblog.model.Article;
-import org.wildcodeschool.myblog.model.Category;
-import org.wildcodeschool.myblog.model.Image;
-import org.wildcodeschool.myblog.repository.ArticleRepository;
-import org.wildcodeschool.myblog.repository.CategoryRepository;
-import org.wildcodeschool.myblog.repository.ImageRepository;
+import org.wildcodeschool.myblog.model.*;
+import org.wildcodeschool.myblog.repository.*;
 
 import java.time.LocalDateTime;
 import java.util.ArrayList;
@@ -21,21 +18,22 @@ import java.util.stream.Collectors;
 @RequestMapping("/articles")
 public class ArticleController {
 
+
     private final ArticleRepository articleRepository;
     private final CategoryRepository categoryRepository;
     private final ImageRepository imageRepository;
+    private final AuthorRepository authorRepository;
+    private final ArticleAuthorRepository articleAuthorRepository;
 
-    public ArticleController(
-            ArticleRepository articleRepository,
-            CategoryRepository categoryRepository,
-            ImageRepository imageRepository, ImageRepository imageRepository1
-    ) {
+    public ArticleController(ArticleRepository articleRepository, CategoryRepository categoryRepository, ImageRepository imageRepository, AuthorRepository authorRepository, ArticleAuthorRepository articleAuthorRepository) {
         this.articleRepository = articleRepository;
         this.categoryRepository = categoryRepository;
-        this.imageRepository = imageRepository1;
+        this.imageRepository = imageRepository;
+        this.authorRepository = authorRepository;
+        this.articleAuthorRepository = articleAuthorRepository;
     }
 
-    private ArticleDTO convertToDTO(Article article) {
+    private ArticleDTO convertToDto(Article article) {
         ArticleDTO articleDTO = new ArticleDTO();
         articleDTO.setId(article.getId());
         articleDTO.setTitle(article.getTitle());
@@ -47,6 +45,18 @@ public class ArticleController {
         if (article.getImages() != null) {
             articleDTO.setImageUrls(article.getImages().stream().map(Image::getUrl).collect(Collectors.toList()));
         }
+        if (article.getArticleAuthors() != null) {
+            articleDTO.setAuthors(article.getArticleAuthors().stream()
+                    .filter(articleAuthor -> articleAuthor.getAuthor() != null)
+                    .map(articleAuthor -> {
+                        ArticleAuthorDTO articleAuthorDTO = new ArticleAuthorDTO();
+                        articleAuthorDTO.setArticleId(article.getId());
+                        articleAuthorDTO.setAuthorId(articleAuthor.getAuthor().getId());
+                        articleAuthorDTO.setContribution(articleAuthor.getContribution());  // On récupère la contribution
+                        return articleAuthorDTO;
+                    })
+                    .collect(Collectors.toList()));
+        }
         return articleDTO;
     }
 
@@ -56,57 +66,17 @@ public class ArticleController {
         if (articles.isEmpty()) {
             return ResponseEntity.noContent().build();
         }
-        List<ArticleDTO> articleDTOS = articles.stream().map(this::convertToDTO).toList();
-        return ResponseEntity.ok(articleDTOS);
+        List<ArticleDTO> articleDTOs = articles.stream().map(this::convertToDto).collect(Collectors.toList());
+        return ResponseEntity.ok(articleDTOs);
     }
 
     @GetMapping("/{id}")
-    public ResponseEntity<ArticleDTO> getArticleById(@PathVariable Long id) {
+    public ResponseEntity<ArticleDTO> getAllArticleById(@PathVariable Long id) {
         Article article = articleRepository.findById(id).orElse(null);
         if (article == null) {
             return ResponseEntity.notFound().build();
         }
-        return ResponseEntity.ok(convertToDTO(article));
-    }
-
-    @GetMapping("/search-title")
-    public ResponseEntity<List<ArticleDTO>> getArticlesByTitle(@RequestParam String searchTerms) {
-        List<Article> articles = articleRepository.findByTitle(searchTerms);
-        if (articles.isEmpty()) {
-            return ResponseEntity.noContent().build();
-        }
-        List<ArticleDTO> articleDTOS = articles.stream().map(this::convertToDTO).toList();
-        return ResponseEntity.ok(articleDTOS);
-    }
-
-    @GetMapping("/search-content")
-    public ResponseEntity<List<ArticleDTO>> getArticlesByContent(@RequestParam String searchTerms) {
-        List<Article> articles = articleRepository.findByContent(searchTerms);
-        if (articles.isEmpty()) {
-            return ResponseEntity.noContent().build();
-        }
-        List<ArticleDTO> articleDTOS = articles.stream().map(this::convertToDTO).toList();
-        return ResponseEntity.ok(articleDTOS);
-    }
-
-    @GetMapping("/search-created-after")
-    public ResponseEntity<List<ArticleDTO>> getArticlesCreateAfter(@RequestParam LocalDateTime searchDate) {
-        List<Article> articles = articleRepository.findByCreatedAtAfter(searchDate);
-        if (articles.isEmpty()) {
-            return ResponseEntity.noContent().build();
-        }
-        List<ArticleDTO> articleDTOS = articles.stream().map(this::convertToDTO).toList();
-        return ResponseEntity.ok(articleDTOS);
-    }
-
-    @GetMapping("/search-five-last")
-    public ResponseEntity<List<ArticleDTO>> getFiveLastArticles() {
-        List<Article> articles = articleRepository.findTop5ByOrderByCreatedAtDesc();
-        if (articles.isEmpty()) {
-            return ResponseEntity.noContent().build();
-        }
-        List<ArticleDTO> articleDTOS = articles.stream().map(this::convertToDTO).toList();
-        return ResponseEntity.ok(articleDTOS);
+        return ResponseEntity.ok(convertToDto(article));
     }
 
     @PostMapping
@@ -114,7 +84,6 @@ public class ArticleController {
         article.setCreatedAt(LocalDateTime.now());
         article.setUpdatedAt(LocalDateTime.now());
 
-        // Ajout de la catégorie
         if (article.getCategory() != null) {
             Category category = categoryRepository.findById(article.getCategory().getId()).orElse(null);
             if (category == null) {
@@ -122,7 +91,6 @@ public class ArticleController {
             }
             article.setCategory(category);
         }
-
         if (article.getImages() != null && !article.getImages().isEmpty()) {
             List<Image> validImages = new ArrayList<>();
             for (Image image : article.getImages()) {
@@ -143,29 +111,43 @@ public class ArticleController {
             article.setImages(validImages);
         }
 
+
         Article savedArticle = articleRepository.save(article);
-        return ResponseEntity.status(HttpStatus.CREATED).body(convertToDTO(savedArticle));
+
+        if (article.getArticleAuthors() != null) {
+            for (ArticleAuthor articleAuthor : article.getArticleAuthors()) {
+                Author author = articleAuthor.getAuthor();
+                author = authorRepository.findById(author.getId()).orElse(null);
+                if (author == null) {
+                    return ResponseEntity.badRequest().body(null);
+                }
+
+                articleAuthor.setAuthor(author);
+                articleAuthor.setArticle(savedArticle);
+                articleAuthor.setContribution(articleAuthor.getContribution());
+                articleAuthorRepository.save(articleAuthor);
+            }
+        }
+
+        return ResponseEntity.status(HttpStatus.CREATED).body(convertToDto(savedArticle));
     }
 
     @PutMapping("/{id}")
     public ResponseEntity<ArticleDTO> updateArticle(@PathVariable Long id, @RequestBody Article articleDetails) {
-
-        Article article = articleRepository.findById(id).orElse(null);
-        if (article == null) {
+        Article articleToUpdate = articleRepository.findById(id).orElse(null);
+        if (articleToUpdate == null) {
             return ResponseEntity.notFound().build();
         }
+        articleToUpdate.setTitle(articleDetails.getTitle());
+        articleToUpdate.setContent(articleDetails.getContent());
+        articleToUpdate.setUpdatedAt(LocalDateTime.now());
 
-        article.setTitle(articleDetails.getTitle());
-        article.setContent(articleDetails.getContent());
-        article.setUpdatedAt(LocalDateTime.now());
-
-        // Mise à jour de la catégorie
         if (articleDetails.getCategory() != null) {
             Category category = categoryRepository.findById(articleDetails.getCategory().getId()).orElse(null);
             if (category == null) {
                 return ResponseEntity.badRequest().body(null);
             }
-            article.setCategory(category);
+            articleToUpdate.setCategory(category);
         }
 
         if (articleDetails.getImages() != null) {
@@ -186,25 +168,103 @@ public class ArticleController {
                 }
             }
             // Mettre à jour la liste des images associées
-            article.setImages(validImages);
+            articleToUpdate.setImages(validImages);
         } else {
             // Si aucune image n'est fournie, on nettoie la liste des images associées
-            article.getImages().clear();
+            articleToUpdate.getImages().clear();
+        }
+        if (articleDetails.getArticleAuthors() != null) {
+            // Supprimer manuellement les anciens ArticleAuthor
+            for (ArticleAuthor oldArticleAuthor : articleToUpdate.getArticleAuthors()) {
+                articleAuthorRepository.delete(oldArticleAuthor);
+            }
+
+            List<ArticleAuthor> updatedArticleAuthors = new ArrayList<>();
+
+            for (ArticleAuthor articleAuthorDetails : articleDetails.getArticleAuthors()) {
+                Author author = articleAuthorDetails.getAuthor();
+                author = authorRepository.findById(author.getId()).orElse(null);
+                if (author == null) {
+                    return ResponseEntity.badRequest().build();
+                }
+
+                // Créer et associer la nouvelle relation ArticleAuthor
+                ArticleAuthor newArticleAuthor = new ArticleAuthor();
+                newArticleAuthor.setAuthor(author);
+                newArticleAuthor.setArticle(articleToUpdate);
+                newArticleAuthor.setContribution(articleAuthorDetails.getContribution());
+
+                updatedArticleAuthors.add(newArticleAuthor);
+            }
+
+            for (ArticleAuthor articleAuthor : updatedArticleAuthors) {
+                articleAuthorRepository.save(articleAuthor);
+            }
+
+            articleToUpdate.setArticleAuthors(updatedArticleAuthors);
         }
 
-        Article updatedArticle = articleRepository.save(article);
-        return ResponseEntity.ok(convertToDTO(updatedArticle));
+        Article updateArticle = articleRepository.save(articleToUpdate);
+        return ResponseEntity.ok(convertToDto(updateArticle));
     }
 
     @DeleteMapping("/{id}")
     public ResponseEntity<Void> deleteArticle(@PathVariable Long id) {
-
         Article article = articleRepository.findById(id).orElse(null);
         if (article == null) {
             return ResponseEntity.notFound().build();
         }
-
+        // Supprimer les associations ArticleAuthor manuellement
+        if (article.getArticleAuthors() != null) {
+            for (ArticleAuthor articleAuthor : article.getArticleAuthors()) {
+                articleAuthorRepository.delete(articleAuthor);
+            }
+        }
+        // Supprimer l'article lui-même
         articleRepository.delete(article);
         return ResponseEntity.noContent().build();
     }
+
+    @GetMapping("/search-title")
+    public ResponseEntity<List<ArticleDTO>> getArticleByTitle(@RequestParam String searchTitle) {
+        List<Article> articles = articleRepository.findByTitle(searchTitle);
+        if (articles.isEmpty()) {
+            return ResponseEntity.notFound().build();
+        }
+        List<ArticleDTO> articleDTOs = articles.stream().map(this::convertToDto).collect(Collectors.toList());
+        return ResponseEntity.ok(articleDTOs);
+    }
+
+    // Méthode pour liste d'articles dont le contenu contient une chaine de caractère fournie en paramètre
+    @GetMapping("/search/content")
+    public ResponseEntity<List<ArticleDTO>> getArticlesByContent(@RequestParam("content") String content) {
+        List<Article> articles = articleRepository.findByContentContaining(content);
+        if (articles.isEmpty()) {
+            return ResponseEntity.noContent().build();
+        }
+        List<ArticleDTO> articleDTOs = articles.stream().map(this::convertToDto).collect(Collectors.toList());
+
+        return ResponseEntity.ok(articleDTOs);
+    }
+
+
+    // Méthode pour  des articles créés après une certaine date
+    @GetMapping("/search/createdAfter")
+    public ResponseEntity<List<ArticleDTO>> getArticlesCreatedAfter(@RequestParam("date") String date) {
+        LocalDateTime createdAt = LocalDateTime.parse(date);
+        List<Article> articles = articleRepository.findByCreatedAtAfter(createdAt);
+
+        List<ArticleDTO> articleDTOs = articles.stream().map(this::convertToDto).collect(Collectors.toList());
+        return articles.isEmpty() ? ResponseEntity.noContent().build() : ResponseEntity.ok(articleDTOs);
+    }
+
+    // Méthode  5 derniers articles créés
+    @GetMapping("/latest")
+    public ResponseEntity<List<ArticleDTO>> getFiveLastArticles() {
+        List<Article> articles = articleRepository.findTop5ByOrderByCreatedAtDesc();
+        List<ArticleDTO> articleDTOs = articles.stream().map(this::convertToDto).collect(Collectors.toList());
+        return articles.isEmpty() ? ResponseEntity.noContent().build() : ResponseEntity.ok(articleDTOs);
+    }
+
+
 }
